# CITRUS

./: .gitignore  Pipfile  README.md  __init__.py  argparseInput.py  config.json  dev-env.yml  import_read_hail.py  noxfile.py  output.csv  output_config.json  pyproject.toml  pyvenv.cfg  requirements.txt  setup.py  test.csv  test.json  test_shap_config.json
.github/workflows/: tests.yml
citrus/: cli.py  plot.py  utils.py
citrus/pheno_sim/: base_nodes.py  pheno_simulation.py
citrus/sim_results/: config.json  sim_config.json
citrus/tests/: test_citrus.py
cl_tool/: cli.py  config.json  output.csv  run_simulation.py
cl_tool/sim_results/: config.json  output.csv  sim_config.json
cl_tool/test_configs/: simple_sim.json  simple_sim_rerun.json
doc/: cli.md  designing_simulations.md  doc_gen.md  input_nodes.md  input_sources.md  operator_nodes.md  user_guide.md
doc/commands/: generate.md  plot.md  shap.md  simulate.md
doc/example_nbs/: broad_sense_heritability_estimation.ipynb  complex_pheno_1.ipynb  herit_estimation.ipynb  heritability_estimation.ipynb  linear_additive_pheno.ipynb  narrow_sense_heritability_estimation.ipynb
doc/operator_nodes/: conditional_func.md  constant_func.md  distribution_func.md  hap_combine_func.md  math_func.md  node_builder.md  noise.md  reduce_func.md  scaling.md  transformation_func.md  util_func.md
example-files/: example_gts_chr19.vcf.gz.tbi  linear_additive.json  linear_additive_nogenotypes.json
output.mt/: .README.txt.crc  .metadata.json.gz.crc
output.mt/cols/: .metadata.json.gz.crc  README.txt
output.mt/entries/: .metadata.json.gz.crc
output.mt/globals/: .metadata.json.gz.crc
output.mt/rows/: .metadata.json.gz.crc
paper/pheno_sim/: citrus_out_to_plink_fmt.py  est_heritability.py  gen_lin_add_sim.py  simulate_lin_add_pheno.sh
pheno_sim/: __init__.py  base_classes.md  base_nodes.py  classes.md  data_types.py  pheno_simulation.py  plot.py  steps.py
pheno_sim/design_utils/: input_source_info.py
pheno_sim/func_nodes/: __init__.py  combine_nodes.py  conditional_func.py  constant_func.py  distribution_func.py  gen_func_nodes.py  hap_combine_func.py  noise.py  (+6 more)
pheno_sim_demos/: prelim0.py  prelim1.py  prelim2.py
test/: cmdline_tests.sh
(+142 files in other folders)
