[tool.poetry]
name = "citrus"
version = "0.1.0"
description = "CIs and TRans interaction nUmerical Simulator for simulating phenotypes from genotypes"
authors = ["Ross DeVito"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gymrek-lab/citrus"
homepage = "https://github.com/gymrek-lab/citrus"
documentation = "https://github.com/gymrek-lab/citrus"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.tests.dependencies]
pytest = ">=6.2.0"
pytest-cov = ">=3.0.0"

[tool.poetry.group.docs.dependencies]
sphinx = ">=3.0.4"
sphinx-rtd-theme = ">=1.0.0"
sphinx-autodoc-typehints = ">=1.12.0"

[tool.poetry.scripts]
citrus = "citrus.cli:citrus"

[tool.pytest.ini_options]
addopts = """
--ignore noxfile.py --doctest-modules
"""

[tool.coverage.run]
omit = [
    ".nox/*",
    "noxfile.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
]